# EECS348-Group1Compiler

./: .gitignore  CMakeLists.txt  Meeting Logs.docx  README.md  Software Requirements Spec.docx  makefile  ~$eting_Logs.docx
documents/: Meeting Logs.docx
source/: ast.h  evaluator.h  lexer.h  parser.cpp  test.cpp
src/: ast.h  evaluator.cpp  evaluator.h  exprparser  lexer.cpp  lexer.h  main.cpp  makefile  parser.cpp  parser.h  printer.cpp  printer.h  token.h  treePrinter.h
tests/: evaluatorTest.cpp  lexerTest.cpp  parserTest.cpp  test.py  testBuild.py  test_results.csv  tests.csv
